# Primeiros_Passos_Python

./: pyproject.toml
