[tool.poetry]
name = "python"
version = "0.1.0"
description = "Fundamentos da linguagem Python"
authors = ["Lucas-Brito-Dev <lucasbrito_dev@outlook.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
